Apply code inspection suggestions